kube/shop/base/recommendations/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendations-app-v2
  namespace: shop-ns
  labels:
    app: recommendations-app
spec:
  selector:
    matchLabels:
      app: recommendations-app
  template:
    metadata:
      labels:
        app: recommendations-app
        version: 0.0.5
    spec:
      containers:
        - name: recommendations-app
          image: radkeke/recommender:0.0.5
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
          ports:
            - containerPort: 8082

          livenessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 5
