kube/shop/base/recommendations/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendations-app
  namespace: shop-ns
  labels:
    app: recommendations-app
    version: dev
spec:
  selector:
    matchLabels:
      app: recommendations-app
      version: dev
  template:
    metadata:
      labels:
        app: recommendations-app
        version: dev
    spec:
      serviceAccountName: recommendations-sa
      containers:
      - name: recommendations-app
        image: radkeke/recommender:0.0.4
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "5m"
        ports:
        - containerPort: 8082
        livenessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8082
          initialDelaySeconds: 20
          periodSeconds: 10
          failureThreshold: 5
        readinessProbe:
            httpGet:
                path: /actuator/health/liveness
                port: 8082
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 2
