kube/shop/base/recommendations/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendations-svc
  namespace: shop-ns
  labels:
    app: recommendations-app
spec:
    selector:
        app: recommendations-app
    ports:
    - port: 8082
      targetPort: 8082
      appProtocol: http
