kube/shop/base/recommendations/v-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: recommendations-vsvc
  namespace: shop-ns
spec:
    hosts:
    - recommendations-svc
    http:
    - route:
        - destination:
            host: recommendations-svc
