kube/shop/base/recommendations/authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: recommendations-authz
  namespace: shop-ns
spec:
    selector:
      matchLabels:
        app: recommendations-app
    action: ALLOW
    rules:
    - from:
      - source:
          principals:
            - "cluster.local/ns/shop-ns/sa/front-sa"
      to:
      - operation:
          methods: ["GET"]
          paths: ["/recommendations"]
